--- a/Ameliorer Typo/typo.css
+++ b/Ameliorer Typo/typo.css
@@ -1,4 +1,11 @@
+body{
+	padding:100px;
+	padding-right: 200px;
+}
+
 h1{
+	padding-top: 50px;
+	padding-bottom: 50px;
 	text-align: center;
 	font-size: 40px;
 	font-family: 'Major Mono Display', monospace;
@@ -23,4 +30,13 @@ margin:0 25% 0 25%;
 	list-style: none;
 	border: 1px solid black;
 	margin:0 25% 0 25%;
+}
+
+.image1{
+	display: block;
+	float:right;
+	margin-left: 50px;
+	width:40%;
+	height:auto;
+	
 }
