--- a/Guide Typo/guide.css
+++ b/Guide Typo/guide.css
@@ -32,6 +32,15 @@ list-style: none;
  color:#FFFFFF;
 }
 
+body{
+	background-color: #53545F;
+}
+
+main {
+	width: 80%;
+	background-color: #FFFFFF;
+	margin-left: 130px;
+}
 
 h1{
 	padding-top: 50px;
@@ -54,12 +63,12 @@ h3{
 }
 
 p {
-	font-size: 20px	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	font-size: 18px;
 	text-align: center;;
 	line-height: 2;
 	text-align: center;
-	padding-right: 200px;
+	padding-right: 20px;
 }
 
 li{
