--- a/Ameliorer Typo/typo.css
+++ b/Ameliorer Typo/typo.css
@@ -40,7 +40,6 @@ main {
 
 
 
-
 h1{
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -52,6 +51,8 @@ h1{
 h2 {
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 25px;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 p {
