--- a/Guide Typo/guide.css
+++ b/Guide Typo/guide.css
@@ -54,12 +54,16 @@ h2 {
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 25px;
 	text-align: center;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 h3{
 		font-family: 'Ubuntu', sans-serif;
 	font-size: 20px;
 	text-align: center;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 p {
