--- a/Turlututu/assets/css/Turlututu.css
+++ b/Turlututu/assets/css/Turlututu.css
@@ -12,6 +12,8 @@
 
 h2 { padding-left: 70px; }
 
+.navbar2 { margin-bottom: -20px; }
+
 .menu1 { -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding-right: 20px; }
 
 .liste1 { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: start; -ms-flex-pack: start; justify-content: flex-start; color: #ffffff; font-family: 'Roboto', sans-serif; }
@@ -38,7 +40,7 @@ a:link { text-decoration: none; color: #ffffff; }
 
 .partie2 { font-family: "Montserrat", sans-serif; margin: 0 25% 0; }
 
-.partie3 { height: 300px; background-color: #13AFCF; font-family: "Montserrat", sans-serif; }
+.partie3 { height: 300px; background-color: #13AFCF; font-family: "Montserrat", sans-serif; color: #ffffff; }
 
 .container2 { width: 90%; margin: 0 5% 0 5%; padding-left: 60px; }
 
@@ -57,4 +59,6 @@ a:link { text-decoration: none; color: #ffffff; }
 .button1 { background-color: #045FB4; border-radius: 20px; padding: 10px; margin: 0 20% 0; padding-bottom: 20px; width: 300px; }
 
 .button2 { background-color: #FFA233; border-radius: 20px; padding: 10px; margin: 0 20% 0; padding-bottom: 20px; width: 300px; }
+
+.liste1 { display: inline; padding: 20px; background-color: #61616C; color: #ffffff; font-family: 'Roboto', sans-serif; }
 /*# sourceMappingURL=Turlututu.css.map */
