--- a/Turlututu/assets/sass/Turlututu.scss
+++ b/Turlututu/assets/sass/Turlututu.scss
@@ -23,7 +23,7 @@ $police:'Montserrat', sans-serif;
     display: flex;
     justify-content: space-between;
     align-content: baseline;
-    background-color: $listecolor;
+    background-color:$listecolor;
     margin-bottom: 20px;
 }
 
@@ -35,8 +35,8 @@ $police:'Montserrat', sans-serif;
 
 %hover
 {
-    background-color : blue;
-    border-radius:5px;
+  background-color : blue;
+  border-radius:5px;
 }
 
 @mixin bouton($background-colorbtn) {
@@ -63,10 +63,11 @@ h2{
   }
   .navbar2{
     @extend %nav;
+   margin-bottom: -20px;
   }
   
-  .menu {
-    @extend %menu;
+  .menu{
+   @extend %menu;
    
   }
   
@@ -74,6 +75,7 @@ h2{
     @extend %menu;
     align-items: center;
     padding-right: 20px;
+
   
   }
     .liste1{
@@ -85,13 +87,14 @@ h2{
    }
   
    .liste1:hover{
-      @extend %hover;
+    @extend %hover;
    }
    .liste2:hover{
     @extend %hover;
    }
   
   ul a{
+  
    text-decoration : none;
    }
   
@@ -154,6 +157,7 @@ h2{
     height: 300px ;
     background-color: #13AFCF;
     font-family: $police ;
+    color:$textecolor;
   }
   
   .container2{
@@ -252,7 +256,7 @@ h2{
   .liste1{
       display:inline;
     padding:20px ;
-    background-color:$listecolorC;
+    background-color:$listecolor;
     color:$textecolor;
     font-family:'Roboto', sans-serif;
    }
