--- a/Turlututu/assets/sass/Turlututu.scss
+++ b/Turlututu/assets/sass/Turlututu.scss
@@ -117,6 +117,7 @@ h2{
     background-color: #13AFCF ;
     margin-top:-20px;
     padding-bottom: 30px;
+    position: relative;
       
   }
   
@@ -260,3 +261,32 @@ h2{
     color:$textecolor;
     font-family:'Roboto', sans-serif;
    }
+
+  /* @media only screen and (max-width:320px){
+    .menu{
+      display: flex;
+      flex-direction: column;
+    }
+   section{
+     display: flex;
+     flex-direction: column;
+   }
+  .partie1 .partie2 .partie3 .partie4 .partie5 {
+    display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+  }
+  .partie6{
+    display: flex;
+    flex-direction: column;
+    padding-right: 310px;
+  }
+  .geek{
+  
+    width: 30px;
+  }
+  .logo{
+    width: 5%;
+  }
+  }*/
